--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,10 +1,14 @@
 $bgColor: #333;
 
-body {
-	div {
-		width: 200px;
-		height: 200px;
-		background: $bgColor;
-		color: #fff;
-	}
+* {
+	margin: 0;
+	padding: 0;
 }
+
+#root {
+	width: 200px;
+	height: 200px;
+	background: $bgColor;
+	color: #fff;
+}
+
